added visualization prototype, fixed small bug in driver

--- a/content/diffusion/diffusion_demo.ipynb
+++ b/content/diffusion/diffusion_demo.ipynb
@@ -557,7 +557,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO: visualize"
+    "# TODO: install matplotlib in docker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from IPython.display import clear_output\n",
+    "import matplotlib.pyplot as plt\n",
+    "import csv\n",
+    "import glob\n",
+    "%matplotlib inline\n",
+    "\n",
+    "x,y = np.loadtxt('initP.txt', unpack=True)\n",
+    "T = np.loadtxt('initT.txt')\n",
+    "def draw_fig():\n",
+    "    clear_output(wait=True)    \n",
+    "    fig = plt.figure(figsize=(12,8), dpi=100)\n",
+    "    ax1 = fig.add_subplot(131, projection='3d')  \n",
+    "    ax1.plot_trisurf(x,y,z, triangles=T-1, cmap=plt.cm.autumn)\n",
+    "    ax1.set_zlim(0,1)\n",
+    "    ax1.set_title('Simulation')\n",
+    "    ax2 = fig.add_subplot(132, projection='3d')  \n",
+    "    ax2.plot_trisurf(x,y,sol, triangles=T-1, cmap=plt.cm.autumn)\n",
+    "    ax2.set_zlim(0,1)\n",
+    "    ax2.set_title('Solution')\n",
+    "    ax3 = fig.add_subplot(133, projection='3d')  \n",
+    "    ax3.plot_trisurf(x,y,z-sol, triangles=T-1, cmap=plt.cm.autumn)\n",
+    "    ax3.set_zlim(-0.1,0.1)\n",
+    "    ax3.set_title('Error (Sim - Sol)')\n",
+    "    plt.show()\n",
+    "\n",
+    "out_files = sorted(glob.glob('out/stepT*.txt'))\n",
+    "sol_files = sorted(glob.glob('out/solT*.txt'))\n",
+    "for [out_file, sol_file] in zip(out_files,sol_files):\n",
+    "    z = np.loadtxt(out_file)\n",
+    "    sol = np.loadtxt(sol_file)\n",
+    "    draw_fig()    "
    ]
   }
  ],
