anim corections, driver test and run

--- a/content/diffusion/diffusion_demo.ipynb
+++ b/content/diffusion/diffusion_demo.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,12 +150,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The driver just executes the stencil a few times and writes its output to file."
+    "First, we put the runner into test mode to ensure that the computed kernel is correct:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -165,203 +165,33 @@
      "output_type": "stream",
      "text": [
       "mesh stats: #cells 680 #nodes 378 #edges 1057\n",
-      "time 0.105 timestep 1 dt 0.005\n",
-      "time 0.11 timestep 2 dt 0.005\n",
-      "time 0.115 timestep 3 dt 0.005\n",
-      "time 0.12 timestep 4 dt 0.005\n",
-      "time 0.125 timestep 5 dt 0.005\n",
-      "time 0.13 timestep 6 dt 0.005\n",
-      "time 0.135 timestep 7 dt 0.005\n",
-      "time 0.14 timestep 8 dt 0.005\n",
-      "time 0.145 timestep 9 dt 0.005\n",
-      "time 0.15 timestep 10 dt 0.005\n",
-      "time 0.155 timestep 11 dt 0.005\n",
-      "time 0.16 timestep 12 dt 0.005\n",
-      "time 0.165 timestep 13 dt 0.005\n",
-      "time 0.17 timestep 14 dt 0.005\n",
-      "time 0.175 timestep 15 dt 0.005\n",
-      "time 0.18 timestep 16 dt 0.005\n",
-      "time 0.185 timestep 17 dt 0.005\n",
-      "time 0.19 timestep 18 dt 0.005\n",
-      "time 0.195 timestep 19 dt 0.005\n",
-      "time 0.2 timestep 20 dt 0.005\n",
-      "time 0.205 timestep 21 dt 0.005\n",
-      "time 0.21 timestep 22 dt 0.005\n",
-      "time 0.215 timestep 23 dt 0.005\n",
-      "time 0.22 timestep 24 dt 0.005\n",
-      "time 0.225 timestep 25 dt 0.005\n",
-      "time 0.23 timestep 26 dt 0.005\n",
-      "time 0.235 timestep 27 dt 0.005\n",
-      "time 0.24 timestep 28 dt 0.005\n",
-      "time 0.245 timestep 29 dt 0.005\n",
-      "time 0.25 timestep 30 dt 0.005\n",
-      "time 0.255 timestep 31 dt 0.005\n",
-      "time 0.26 timestep 32 dt 0.005\n",
-      "time 0.265 timestep 33 dt 0.005\n",
-      "time 0.27 timestep 34 dt 0.005\n",
-      "time 0.275 timestep 35 dt 0.005\n",
-      "time 0.28 timestep 36 dt 0.005\n",
-      "time 0.285 timestep 37 dt 0.005\n",
-      "time 0.29 timestep 38 dt 0.005\n",
-      "time 0.295 timestep 39 dt 0.005\n",
-      "time 0.3 timestep 40 dt 0.005\n",
-      "time 0.305 timestep 41 dt 0.005\n",
-      "time 0.31 timestep 42 dt 0.005\n",
-      "time 0.315 timestep 43 dt 0.005\n",
-      "time 0.32 timestep 44 dt 0.005\n",
-      "time 0.325 timestep 45 dt 0.005\n",
-      "time 0.33 timestep 46 dt 0.005\n",
-      "time 0.335 timestep 47 dt 0.005\n",
-      "time 0.34 timestep 48 dt 0.005\n",
-      "time 0.345 timestep 49 dt 0.005\n",
-      "time 0.35 timestep 50 dt 0.005\n",
-      "time 0.355 timestep 51 dt 0.005\n",
-      "time 0.36 timestep 52 dt 0.005\n",
-      "time 0.365 timestep 53 dt 0.005\n",
-      "time 0.37 timestep 54 dt 0.005\n",
-      "time 0.375 timestep 55 dt 0.005\n",
-      "time 0.38 timestep 56 dt 0.005\n",
-      "time 0.385 timestep 57 dt 0.005\n",
-      "time 0.39 timestep 58 dt 0.005\n",
-      "time 0.395 timestep 59 dt 0.005\n",
-      "time 0.4 timestep 60 dt 0.005\n",
-      "time 0.405 timestep 61 dt 0.005\n",
-      "time 0.41 timestep 62 dt 0.005\n",
-      "time 0.415 timestep 63 dt 0.005\n",
-      "time 0.42 timestep 64 dt 0.005\n",
-      "time 0.425 timestep 65 dt 0.005\n",
-      "time 0.43 timestep 66 dt 0.005\n",
-      "time 0.435 timestep 67 dt 0.005\n",
-      "time 0.44 timestep 68 dt 0.005\n",
-      "time 0.445 timestep 69 dt 0.005\n",
-      "time 0.45 timestep 70 dt 0.005\n",
-      "time 0.455 timestep 71 dt 0.005\n",
-      "time 0.46 timestep 72 dt 0.005\n",
-      "time 0.465 timestep 73 dt 0.005\n",
-      "time 0.47 timestep 74 dt 0.005\n",
-      "time 0.475 timestep 75 dt 0.005\n",
-      "time 0.48 timestep 76 dt 0.005\n",
-      "time 0.485 timestep 77 dt 0.005\n",
-      "time 0.49 timestep 78 dt 0.005\n",
-      "time 0.495 timestep 79 dt 0.005\n",
-      "time 0.5 timestep 80 dt 0.005\n",
-      "time 0.505 timestep 81 dt 0.005\n",
-      "time 0.51 timestep 82 dt 0.005\n",
-      "time 0.515 timestep 83 dt 0.005\n",
-      "time 0.52 timestep 84 dt 0.005\n",
-      "time 0.525 timestep 85 dt 0.005\n",
-      "time 0.53 timestep 86 dt 0.005\n",
-      "time 0.535 timestep 87 dt 0.005\n",
-      "time 0.54 timestep 88 dt 0.005\n",
-      "time 0.545 timestep 89 dt 0.005\n",
-      "time 0.55 timestep 90 dt 0.005\n",
-      "time 0.555 timestep 91 dt 0.005\n",
-      "time 0.56 timestep 92 dt 0.005\n",
-      "time 0.565 timestep 93 dt 0.005\n",
-      "time 0.57 timestep 94 dt 0.005\n",
-      "time 0.575 timestep 95 dt 0.005\n",
-      "time 0.58 timestep 96 dt 0.005\n",
-      "time 0.585 timestep 97 dt 0.005\n",
-      "time 0.59 timestep 98 dt 0.005\n",
-      "time 0.595 timestep 99 dt 0.005\n",
-      "time 0.6 timestep 100 dt 0.005\n",
-      "time 0.605 timestep 101 dt 0.005\n",
-      "time 0.61 timestep 102 dt 0.005\n",
-      "time 0.615 timestep 103 dt 0.005\n",
-      "time 0.62 timestep 104 dt 0.005\n",
-      "time 0.625 timestep 105 dt 0.005\n",
-      "time 0.63 timestep 106 dt 0.005\n",
-      "time 0.635 timestep 107 dt 0.005\n",
-      "time 0.64 timestep 108 dt 0.005\n",
-      "time 0.645 timestep 109 dt 0.005\n",
-      "time 0.65 timestep 110 dt 0.005\n",
-      "time 0.655 timestep 111 dt 0.005\n",
-      "time 0.66 timestep 112 dt 0.005\n",
-      "time 0.665 timestep 113 dt 0.005\n",
-      "time 0.67 timestep 114 dt 0.005\n",
-      "time 0.675 timestep 115 dt 0.005\n",
-      "time 0.68 timestep 116 dt 0.005\n",
-      "time 0.685 timestep 117 dt 0.005\n",
-      "time 0.69 timestep 118 dt 0.005\n",
-      "time 0.695 timestep 119 dt 0.005\n",
-      "time 0.7 timestep 120 dt 0.005\n",
-      "time 0.705 timestep 121 dt 0.005\n",
-      "time 0.71 timestep 122 dt 0.005\n",
-      "time 0.715 timestep 123 dt 0.005\n",
-      "time 0.72 timestep 124 dt 0.005\n",
-      "time 0.725 timestep 125 dt 0.005\n",
-      "time 0.73 timestep 126 dt 0.005\n",
-      "time 0.735 timestep 127 dt 0.005\n",
-      "time 0.74 timestep 128 dt 0.005\n",
-      "time 0.745 timestep 129 dt 0.005\n",
-      "time 0.75 timestep 130 dt 0.005\n",
-      "time 0.755 timestep 131 dt 0.005\n",
-      "time 0.76 timestep 132 dt 0.005\n",
-      "time 0.765 timestep 133 dt 0.005\n",
-      "time 0.77 timestep 134 dt 0.005\n",
-      "time 0.775 timestep 135 dt 0.005\n",
-      "time 0.78 timestep 136 dt 0.005\n",
-      "time 0.785 timestep 137 dt 0.005\n",
-      "time 0.79 timestep 138 dt 0.005\n",
-      "time 0.795 timestep 139 dt 0.005\n",
-      "time 0.8 timestep 140 dt 0.005\n",
-      "time 0.805 timestep 141 dt 0.005\n",
-      "time 0.81 timestep 142 dt 0.005\n",
-      "time 0.815 timestep 143 dt 0.005\n",
-      "time 0.82 timestep 144 dt 0.005\n",
-      "time 0.825 timestep 145 dt 0.005\n",
-      "time 0.83 timestep 146 dt 0.005\n",
-      "time 0.835 timestep 147 dt 0.005\n",
-      "time 0.84 timestep 148 dt 0.005\n",
-      "time 0.845 timestep 149 dt 0.005\n",
-      "time 0.85 timestep 150 dt 0.005\n",
-      "time 0.855 timestep 151 dt 0.005\n",
-      "time 0.86 timestep 152 dt 0.005\n",
-      "time 0.865 timestep 153 dt 0.005\n",
-      "time 0.87 timestep 154 dt 0.005\n",
-      "time 0.875 timestep 155 dt 0.005\n",
-      "time 0.88 timestep 156 dt 0.005\n",
-      "time 0.885 timestep 157 dt 0.005\n",
-      "time 0.89 timestep 158 dt 0.005\n",
-      "time 0.895 timestep 159 dt 0.005\n",
-      "time 0.9 timestep 160 dt 0.005\n",
-      "time 0.905 timestep 161 dt 0.005\n",
-      "time 0.91 timestep 162 dt 0.005\n",
-      "time 0.915 timestep 163 dt 0.005\n",
-      "time 0.92 timestep 164 dt 0.005\n",
-      "time 0.925 timestep 165 dt 0.005\n",
-      "time 0.93 timestep 166 dt 0.005\n",
-      "time 0.935 timestep 167 dt 0.005\n",
-      "time 0.94 timestep 168 dt 0.005\n",
-      "time 0.945 timestep 169 dt 0.005\n",
-      "time 0.95 timestep 170 dt 0.005\n",
-      "time 0.955 timestep 171 dt 0.005\n",
-      "time 0.96 timestep 172 dt 0.005\n",
-      "time 0.965 timestep 173 dt 0.005\n",
-      "time 0.97 timestep 174 dt 0.005\n",
-      "time 0.975 timestep 175 dt 0.005\n",
-      "time 0.98 timestep 176 dt 0.005\n",
-      "time 0.985 timestep 177 dt 0.005\n",
-      "time 0.99 timestep 178 dt 0.005\n",
-      "time 0.995 timestep 179 dt 0.005\n",
-      "time 1 timestep 180 dt 0.005\n"
+      "congratulations!, your stencil is correct, you can visualize now!"
      ]
     }
    ],
    "source": [
-    "!./runner"
+    "!./runner test"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the tester reported that your dusk stencil works correctly, you can now run the complete s"
+    "If the tester reported that your dusk stencil works correctly, you can now run the complete stencil and visualize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!./runner run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +200,8 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D \n",
     "import matplotlib.animation as animation\n",
+    "import glob\n",
+    "from IPython.display import HTML\n",
     "\n",
     "def update_plot(frame_number, zarray, plot):\n",
     "    z = np.loadtxt(out_files[frame_number])\n",
@@ -380,8 +212,14 @@
     "    plot[1] = ax2.plot_trisurf(x, y, sol, triangles=T-1, cmap=plt.cm.autumn)\n",
     "    plot[2] = ax3.plot_trisurf(x, y, z-sol, triangles=T-1, cmap=plt.cm.autumn)\n",
     "    \n",
+    "zarray=[]\n",
+    "\n",
+    "out_files = sorted(glob.glob('out/stepT*.txt'))\n",
+    "sol_files = sorted(glob.glob('out/solT*.txt'))\n",
+    "\n",
     "x,y = np.loadtxt('initP.txt', unpack=True)\n",
     "T = np.loadtxt('initT.txt')\n",
+    "z = np.loadtxt('initC.txt')\n",
     "fig = plt.figure(figsize=(12,8), dpi=100)\n",
     "ax1 = fig.add_subplot(131, projection='3d')  \n",
     "ax1.set_zlim(0,1)\n",
@@ -399,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -412,8 +250,8 @@
        "eDI2NC5odG1sIC0gb3B0aW9uczogY2FiYWM9MSByZWY9MyBkZWJsb2NrPTE6MDowIGFuYWx5c2U9\n",
        "MHgzOjB4MTEzIG1lPWhleCBzdWJtZT03IHBzeT0xIHBzeV9yZD0xLjAwOjAuMDAgbWl4ZWRfcmVm\n",
        "PTEgbWVfcmFuZ2U9MTYgY2hyb21hX21lPTEgdHJlbGxpcz0xIDh4OGRjdD0xIGNxbT0wIGRlYWR6\n",
-       "b25lPTIxLDExIGZhc3RfcHNraXA9MSBjaHJvbWFfcXBfb2Zmc2V0PS0yIHRocmVhZHM9MjUgbG9v\n",
-       "a2FoZWFkX3RocmVhZHM9NCBzbGljZWRfdGhyZWFkcz0wIG5yPTAgZGVjaW1hdGU9MSBpbnRlcmxh\n",
+       "b25lPTIxLDExIGZhc3RfcHNraXA9MSBjaHJvbWFfcXBfb2Zmc2V0PS0yIHRocmVhZHM9MTIgbG9v\n",
+       "a2FoZWFkX3RocmVhZHM9MiBzbGljZWRfdGhyZWFkcz0wIG5yPTAgZGVjaW1hdGU9MSBpbnRlcmxh\n",
        "Y2VkPTAgYmx1cmF5X2NvbXBhdD0wIGNvbnN0cmFpbmVkX2ludHJhPTAgYmZyYW1lcz0zIGJfcHly\n",
        "YW1pZD0yIGJfYWRhcHQ9MSBiX2JpYXM9MCBkaXJlY3Q9MSB3ZWlnaHRiPTEgb3Blbl9nb3A9MCB3\n",
        "ZWlnaHRwPTIga2V5aW50PTI1MCBrZXlpbnRfbWluPTUgc2NlbmVjdXQ9NDAgaW50cmFfcmVmcmVz\n",
@@ -3148,7 +2986,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
