shallow water exercise

--- a/content/shallow_water/shallow_water_demo.ipynb
+++ b/content/shallow_water/shallow_water_demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook demos a diffusion stencil"
+    "# This notebook demos a shallow water stencil"
    ]
   },
   {
@@ -65,48 +65,45 @@
     "\n",
     "\n",
     "@stencil\n",
-    "def diffusion(\n",
-    "    TV: Field[Vertex],\n",
-    "    TE: Field[Edge], TEinit: Field[Edge], TE_t: Field[Edge], TEnabla2: Field[Edge],\n",
-    "    inv_primal_edge_length: Field[Edge], inv_vert_vert_length: Field[Edge], nnbhV: Field[Vertex],\n",
-    "    boundary_edge: Field[Edge],\n",
-    "    kappa: Field[Edge], dt: Field[Edge]\n",
-    ") -> None:\n",
+    "def ws_shallow_water(hC: Field[Cell], hC_t: Field[Cell],\n",
+    "                     vC: Field[Cell], vC_t: Field[Cell],\n",
+    "                     uC: Field[Cell], uC_t: Field[Cell],\n",
+    "                     hC_x: Field[Cell], hC_y: Field[Cell], uvC_div: Field[Cell],\n",
+    "                     hE: Field[Edge], vE: Field[Edge], uE: Field[Edge],\n",
+    "                     nx: Field[Edge], ny: Field[Edge], L: Field[Edge], alpha: Field[Edge],\n",
+    "                     boundary_edges: Field[Edge], boundary_cells: Field[Cell],\n",
+    "                     A: Field[Cell], edge_orientation: Field[Cell > Edge],\n",
+    "                     Grav: Field[Cell]):\n",
     "\n",
-    "    with levels_upward:\n",
-    "        # initialize\n",
-    "        TEinit = TE\n",
-    "    \n",
-    "        # predict\n",
-    "        TE = TEinit + 0.5*dt*TE_t\n",
+    "    with levels_downward:\n",
     "\n",
-    "        # interpolate temperature from edges to vertices\n",
-    "        TV = sum_over(Vertex > Edge, TE) / nnbhV\n",
+    "        # lerp cell quantities to edges\n",
+    "        hE = sum_over(Edge > Cell, hC, weights=[1-alpha, alpha])\n",
+    "        uE = sum_over(Edge > Cell, uC, weights=[1-alpha, alpha])\n",
+    "        vE = sum_over(Edge > Cell, vC, weights=[1-alpha, alpha])\n",
+    "    \n",
+    "        # boundary conditions on cells\n",
+    "        if (boundary_edges):\n",
+    "            uE = 0.\n",
+    "            vE = 0.\n",
     "\n",
-    "        # compute nabla2 using the finite differences\n",
-    "        TEnabla2 = sum_over(\n",
-    "            Edge > Cell > Vertex,\n",
-    "            4.0 * TV,\n",
-    "            weights=[\n",
-    "                inv_primal_edge_length ** 2.,\n",
-    "                inv_primal_edge_length ** 2.,\n",
-    "                inv_vert_vert_length ** 2.,\n",
-    "                inv_vert_vert_length ** 2.,\n",
-    "            ],\n",
-    "        )\n",
-    "        TEnabla2 = TEnabla2 - (\n",
-    "            (8.0 * TE * inv_primal_edge_length ** 2.)\n",
-    "            + (8.0 * TE * inv_vert_vert_length ** 2.)\n",
-    "        )\n",
-    "    \n",
-    "        # build ODEs\n",
-    "        if (boundary_edge):\n",
-    "            TE_t = 0.\n",
-    "        else:\n",
-    "            TE_t = kappa*TEnabla2\n",
-    "    \n",
-    "        # correct\n",
-    "        TE = TEinit + dt*TE_t\n"
+    "        # height field gradient\n",
+    "        hC_x = sum_over(Cell > Edge, hE * nx * L * edge_orientation)\n",
+    "        hC_y = sum_over(Cell > Edge, hE * ny * L * edge_orientation)\n",
+    "\n",
+    "        # height field gradient is zero on the boundaries\n",
+    "        if (boundary_cells):\n",
+    "            hC_x = 0.\n",
+    "            hC_y = 0.\n",
+    "\n",
+    "        # divergence of velocity field\n",
+    "        uvC_div = sum_over(Cell > Edge, (uE*nx + vE*ny)\n",
+    "                           * edge_orientation * L) / A\n",
+    "\n",
+    "        # build ODE's\n",
+    "        uC_t = -Grav * hC_x\n",
+    "        vC_t = -Grav * hC_y\n",
+    "        hC_t = hC * uvC_div   \n"
    ]
   },
   {
@@ -124,7 +121,7 @@
    "source": [
     "sir = dusk_to_sir(diffusion)\n",
     "cpp_naive = compile(sir, backend=CodeGenBackend.CXXNaiveIco)\n",
-    "with open(\"diffusion_cxx-naive.cpp\", \"w+\") as f:\n",
+    "with open(\"shallow_water_cxx-naive.cpp\", \"w+\") as f:\n",
     "    f.write(cpp_naive)"
    ]
   },
@@ -393,34 +390,22 @@
     "\n",
     "def update_plot(frame_number, zarray, plot):\n",
     "    z = np.loadtxt(out_files[frame_number])\n",
-    "    sol = np.loadtxt(sol_files[frame_number])\n",
-    "    for i in range(0,3):\n",
-    "        plot[i].remove()    \n",
-    "    plot[0] = ax1.plot_trisurf(x, y, z, triangles=T-1, cmap=plt.cm.autumn)\n",
-    "    plot[1] = ax2.plot_trisurf(x, y, sol, triangles=T-1, cmap=plt.cm.autumn)\n",
-    "    plot[2] = ax3.plot_trisurf(x, y, z-sol, triangles=T-1, cmap=plt.cm.autumn)\n",
+    "    sol = np.loadtxt(sol_files[frame_number])    \n",
+    "    plot[0].remove()    \n",
+    "    plot[0] = ax1.plot_trisurf(x, y, z, triangles=T-1, cmap=plt.cm.winter)    \n",
     "    \n",
     "zarray=[]\n",
     "\n",
-    "out_files = sorted(glob.glob('out/stepT*.txt'))\n",
-    "sol_files = sorted(glob.glob('out/solT*.txt'))\n",
+    "out_files = sorted(glob.glob('out/stepH*.txt'))\n",
     "\n",
     "x,y = np.loadtxt('initP.txt', unpack=True)\n",
     "T = np.loadtxt('initT.txt')\n",
     "z = np.loadtxt('initC.txt')\n",
     "fig = plt.figure(figsize=(12,8), dpi=100)\n",
-    "ax1 = fig.add_subplot(131, projection='3d')  \n",
-    "ax1.set_zlim(0,1)\n",
-    "ax1.set_title('Simulation')\n",
-    "ax2 = fig.add_subplot(132, projection='3d')  \n",
-    "ax2.set_zlim(0,1)\n",
-    "ax2.set_title('Solution')\n",
-    "ax3 = fig.add_subplot(133, projection='3d')  \n",
-    "ax3.set_zlim(-0.1,0.1)\n",
-    "ax3.set_title('Error (Sim - Sol)')\n",
-    "plot = [ax1.plot_trisurf(x, y, np.zeros(np.size(z)), triangles=T-1, cmap=plt.cm.autumn), \n",
-    "        ax2.plot_trisurf(x, y, np.zeros(np.size(z)), triangles=T-1, cmap=plt.cm.autumn), \n",
-    "        ax3.plot_trisurf(x, y, np.zeros(np.size(z)), triangles=T-1, cmap=plt.cm.autumn)]\n"
+    "ax1 = fig.add_subplot(111, projection='3d')  \n",
+    "ax1.set_zlim(1.5,2.5)\n",
+    "ax1.set_title('Shallow Water')\n",
+    "plot = [ax1.plot_trisurf(x, y, np.zeros(np.size(z)), triangles=T-1, cmap=plt.cm.autumn)]\n"
    ]
   },
   {
