--- a/content/shallow_water/shallow_water_demo.ipynb
+++ b/content/shallow_water/shallow_water_demo.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,10 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -177,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -400,40 +398,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D \n",
+    "import prep_animation as pa\n",
     "import matplotlib.animation as animation\n",
-    "import glob\n",
     "from IPython.display import HTML\n",
-    "\n",
-    "def update_plot(frame_number, zarray, plot):\n",
-    "    z = np.loadtxt(out_files[frame_number])    \n",
-    "    plot[0].remove()    \n",
-    "    plot[0] = ax1.plot_trisurf(x, y, z, triangles=T-1, cmap=plt.cm.winter)    \n",
-    "    \n",
-    "zarray=[]\n",
-    "\n",
-    "out_files = sorted(glob.glob('out/stepH*.txt'))\n",
-    "\n",
-    "x,y = np.loadtxt('initP.txt', unpack=True)\n",
-    "T = np.loadtxt('initT.txt')\n",
-    "z = np.loadtxt('initC.txt')\n",
-    "fig = plt.figure(figsize=(12,8), dpi=100)\n",
-    "ax1 = fig.add_subplot(111, projection='3d')  \n",
-    "ax1.set_zlim(1.5,2.5)\n",
-    "ax1.set_title('Shallow Water')\n",
-    "plot = [ax1.plot_trisurf(x, y, np.zeros(np.size(z)), triangles=T-1, cmap=plt.cm.autumn)]\n"
+    "animate = animation.FuncAnimation(pa.fig, pa.update_plot, len(pa.out_files), fargs=(pa.zarray, pa.plot), interval = 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -16054,13 +16032,12 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "animate = animation.FuncAnimation(fig, update_plot, len(out_files), fargs=(zarray, plot), interval = 50)\n",
     "HTML(animate.to_html5_video())"
    ]
   }
