--- a/content/differential_ops/differential_ops_demo.ipynb
+++ b/content/differential_ops/differential_ops_demo.ipynb
@@ -75,15 +75,15 @@
     "\n",
     "@stencil\n",
     "def divergence(u: Field[Edge], v: Field[Edge], nx: Field[Edge], ny: Field[Edge], L: Field[Edge], A: Field[Cell], edge_orientation: Field[Cell > Edge],\n",
-    "                  f_div: Field[Cell]):\n",
+    "                  uv_div: Field[Cell]):\n",
     "  with levels_downward:\n",
-    "    f_div = sum_over(Cell > Edge, (u*nx + v*ny) * L * edge_orientation) / A\n",
+    "    uv_div = sum_over(Cell > Edge, (u*nx + v*ny) * L * edge_orientation) / A\n",
     "\n",
     "@stencil\n",
     "def curl(u: Field[Edge], v: Field[Edge], nx: Field[Edge], ny: Field[Edge], dualL: Field[Edge], dualA: Field[Vertex], edge_orientation: Field[Vertex > Edge],\n",
-    "            f_curl: Field[Vertex]):\n",
+    "            uv_curl: Field[Vertex]):\n",
     "  with levels_downward:\n",
-    "    f_curl = sum_over(Vertex > Edge, (u*nx + v*ny) * dualL * edge_orientation) / dualA "
+    "    uv_curl = sum_over(Vertex > Edge, (u*nx + v*ny) * dualL * edge_orientation) / dualA "
    ]
   },
   {
