--- a/content/diffusion/diffusion_demo.ipynb
+++ b/content/diffusion/diffusion_demo.ipynb
@@ -2071,7 +2071,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
-  }
+  },
+  "output_auto_scroll": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
