--- a/content/diffusion/diffusion_demo.ipynb
+++ b/content/diffusion/diffusion_demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,39 +74,8 @@
     ") -> None:\n",
     "\n",
     "    with levels_upward:\n",
-    "        # initialize\n",
-    "        TEinit = TE\n",
-    "    \n",
-    "        # predict\n",
-    "        TE = TEinit + 0.5*dt*TE_t\n",
-    "\n",
-    "        # interpolate temperature from edges to vertices\n",
-    "        TV = sum_over(Vertex > Edge, TE) / nnbhV\n",
-    "\n",
-    "        # compute nabla2 using the finite differences\n",
-    "        TEnabla2 = sum_over(\n",
-    "            Edge > Cell > Vertex,\n",
-    "            4.0 * TV,\n",
-    "            weights=[\n",
-    "                inv_primal_edge_length ** 2.,\n",
-    "                inv_primal_edge_length ** 2.,\n",
-    "                inv_vert_vert_length ** 2.,\n",
-    "                inv_vert_vert_length ** 2.,\n",
-    "            ],\n",
-    "        )\n",
-    "        TEnabla2 = TEnabla2 - (\n",
-    "            (8.0 * TE * inv_primal_edge_length ** 2.)\n",
-    "            + (8.0 * TE * inv_vert_vert_length ** 2.)\n",
-    "        )\n",
-    "    \n",
-    "        # build ODEs\n",
-    "        if (boundary_edge):\n",
-    "            TE_t = 0.\n",
-    "        else:\n",
-    "            TE_t = kappa*TEnabla2\n",
-    "    \n",
-    "        # correct\n",
-    "        TE = TEinit + dt*TE_t\n"
+    "        #TODO replace with diffusion solver\n",
+    "        pass    \n"
    ]
   },
   {
@@ -118,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
