--- a/content/shallow_water/shallow_water_demo.ipynb
+++ b/content/shallow_water/shallow_water_demo.ipynb
@@ -11,53 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start with some imports & a small helper function to convert our stencil to SIR:"
+    "We first write our shallow water stencil:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Callable\n",
-    "\n",
-    "from inspect import getsource\n",
-    "import ast\n",
-    "\n",
-    "from dusk.grammar import Grammar\n",
-    "\n",
-    "from dawn4py import compile, CodeGenBackend\n",
-    "from dawn4py.serialization import make_sir, SIR\n",
-    "from dawn4py.serialization.SIR import GridType\n",
-    "from dawn4py._dawn4py import run_optimizer_sir\n",
-    "\n",
-    "\n",
-    "def dusk_to_sir(stencil: Callable) -> SIR:\n",
-    "    # this will give wrong line numbers, there should be a way to fix them\n",
-    "    name = stencil.__name__\n",
-    "    stencil = ast.parse(getsource(stencil))\n",
-    "\n",
-    "    assert isinstance(stencil, ast.Module)\n",
-    "    assert len(stencil.body) == 1\n",
-    "    stencil = stencil.body[0]\n",
-    "    assert Grammar.is_stencil(stencil)\n",
-    "\n",
-    "    return make_sir(\n",
-    "        name, GridType.Value(\"Unstructured\"), [Grammar().stencil(stencil)]\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the above definitions, we can write our shallow water stencil:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,19 +69,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we can use dusk to convert the stencil to SIR. With dawn we can compile SIR to C++ which we will write to `shallow_water_cxx-naive.cpp`:"
+    "Then we can use dusk's Python API to convert the stencils to SIR. This API can also invoke dawn to compile SIR to C++ which we will write to `shallow_water_cxx-naive.cpp`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sir = dusk_to_sir(shallow_water)\n",
-    "cpp_naive = compile(sir, backend=CodeGenBackend.CXXNaiveIco)\n",
+    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_cpp\n",
+    "\n",
     "with open(\"shallow_water_cxx-naive.cpp\", \"w+\") as f:\n",
-    "    f.write(cpp_naive)"
+    "    f.write(sir_to_cpp(pyast_to_sir(callable_to_pyast(shallow_water))))"
    ]
   },
   {
@@ -134,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -394,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -26273,7 +26232,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26300,7 +26259,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
-  }
+  },
+  "output_auto_scroll": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
