--- a/content/differential_ops/differential_ops_demo.ipynb
+++ b/content/differential_ops/differential_ops_demo.ipynb
@@ -132,7 +132,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
   },
-  "output_auto_scroll": true
+  "output_auto_scroll": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
