fix assert reporting

--- a/content/differential_ops/differential_ops_demo.ipynb
+++ b/content/differential_ops/differential_ops_demo.ipynb
@@ -59,10 +59,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dusk.transpile import callables_to_pyast, pyast_to_sir, sir_to_cpp\n",
-    "\n",
-    "with open(\"diff_ops_cxx-naive.cpp\", \"w+\") as f:\n",
-    "    f.write(sir_to_cpp(pyast_to_sir(callables_to_pyast([gradient, divergence, curl]))))"
+    "from dusk.transpile import callables_to_pyast, pyast_to_sir, sir_to_json\n",
+    "with open(\"diff_ops.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callables_to_pyast([gradient, divergence, curl]))\n",
+    "    f.write(sir_to_json(sir))\n",
+    "!/usr/local/dawn/bin/dawn-opt diff_ops.sir | /usr/local/dawn/bin/dawn-codegen -b naive-ico -o diff_ops_cxx-naive.cpp\n"
    ]
   },
   {
