--- a/content/differential_ops/differential_ops_demo.ipynb
+++ b/content/differential_ops/differential_ops_demo.ipynb
@@ -63,7 +63,7 @@
     "with open(\"diff_ops.sir\", \"w+\") as f:\n",
     "    sir = pyast_to_sir(callables_to_pyast([gradient, divergence, curl]))\n",
     "    f.write(sir_to_json(sir))\n",
-    "!/usr/local/dawn/bin/dawn-opt diff_ops.sir | /usr/local/dawn/bin/dawn-codegen -b naive-ico -o diff_ops_cxx-naive.cpp\n"
+    "!dawn-opt diff_ops.sir | dawn-codegen -b naive-ico -o diff_ops_cxx-naive.cpp\n"
    ]
   },
   {
