--- a/content/diffusion/diffusion_demo.ipynb
+++ b/content/diffusion/diffusion_demo.ipynb
@@ -54,7 +54,7 @@
     "with open(\"diffusion.sir\", \"w+\") as f:\n",
     "    sir = pyast_to_sir(callable_to_pyast(diffusion))\n",
     "    f.write(sir_to_json(sir))\n",
-    "!/usr/local/dawn/bin/dawn-opt diffusion.sir | /usr/local/dawn/bin/dawn-codegen -b naive-ico -o diffusion_cxx-naive.cpp"
+    "!dawn-opt diffusion.sir | dawn-codegen -b naive-ico -o diffusion_cxx-naive.cpp"
    ]
   },
   {
