--- a/content/laplacian/laplacian_demo.ipynb
+++ b/content/laplacian/laplacian_demo.ipynb
@@ -67,7 +67,7 @@
     "with open(\"laplacian_fvm.sir\", \"w+\") as f:\n",
     "    sir = pyast_to_sir(callables_to_pyast([laplacian_fvm]))\n",
     "    f.write(sir_to_json(sir))\n",
-    "!/usr/local/dawn/bin/dawn-opt laplacian_fvm.sir | /usr/local/dawn/bin/dawn-codegen -b naive-ico -o laplacian_fvm_cxx-naive.cpp"
+    "!dawn-opt laplacian_fvm.sir | dawn-codegen -b naive-ico -o laplacian_fvm_cxx-naive.cpp"
    ]
   },
   {
