--- a/content/shallow_water/shallow_water_demo.ipynb
+++ b/content/shallow_water/shallow_water_demo.ipynb
@@ -56,7 +56,7 @@
     "with open(\"shallow_water.sir\", \"w+\") as f:\n",
     "    sir = pyast_to_sir(callable_to_pyast(shallow_water))\n",
     "    f.write(sir_to_json(sir))\n",
-    "!/usr/local/dawn/bin/dawn-opt shallow_water.sir | /usr/local/dawn/bin/dawn-codegen -b naive-ico -o shallow_water_cxx-naive.cpp"
+    "!dawn-opt shallow_water.sir | dawn-codegen -b naive-ico -o shallow_water_cxx-naive.cpp"
    ]
   },
   {
