Fix error reporting for asserts (#40)
* fix assert reporting

* Update image tag

* dawn to path

* Minor docker fixes

* Update image tag

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Matthias Roethlin <Matthias.Roethlin@MeteoSwiss.ch>
Co-authored-by: Ben Weber <dev.ben.weber@gmail.com>

--- a/content/laplacian/laplacian_demo.ipynb
+++ b/content/laplacian/laplacian_demo.ipynb
@@ -63,10 +63,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dusk.transpile import callables_to_pyast, pyast_to_sir, sir_to_cpp\n",
-    "\n",
-    "with open(\"laplacian_fvm_cxx-naive.cpp\", \"w+\") as f:\n",
-    "    f.write(sir_to_cpp(pyast_to_sir(callables_to_pyast([laplacian_fvm]))))"
+    "from dusk.transpile import callables_to_pyast, pyast_to_sir, sir_to_json\n",
+    "with open(\"laplacian_fvm.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callables_to_pyast([laplacian_fvm]))\n",
+    "    f.write(sir_to_json(sir))\n",
+    "!dawn-opt laplacian_fvm.sir | dawn-codegen -b naive-ico -o laplacian_fvm_cxx-naive.cpp"
    ]
   },
   {
