--- a/content/shallow_water/shallow_water_demo.ipynb
+++ b/content/shallow_water/shallow_water_demo.ipynb
@@ -52,10 +52,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_cpp\n",
-    "\n",
-    "with open(\"shallow_water_cxx-naive.cpp\", \"w+\") as f:\n",
-    "    f.write(sir_to_cpp(pyast_to_sir(callable_to_pyast(shallow_water))))"
+    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_json\n",
+    "with open(\"shallow_water.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callable_to_pyast(shallow_water))\n",
+    "    f.write(sir_to_json(sir))\n",
+    "!dawn-opt shallow_water.sir | dawn-codegen -b naive-ico -o shallow_water_cxx-naive.cpp"
    ]
   },
   {
