--- a/content/diffusion/diffusion_demo.ipynb
+++ b/content/diffusion/diffusion_demo.ipynb
@@ -50,10 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_cpp\n",
-    "\n",
-    "with open(\"diffusion_cxx-naive.cpp\", \"w+\") as f:\n",
-    "    f.write(sir_to_cpp(pyast_to_sir(callable_to_pyast(diffusion))))"
+    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_json\n",
+    "with open(\"diffusion.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callable_to_pyast(diffusion))\n",
+    "    f.write(sir_to_json(sir))\n",
+    "!dawn-opt diffusion.sir | dawn-codegen -b naive-ico -o diffusion_cxx-naive.cpp"
    ]
   },
   {
