Changed first_exercise to use dawn cli

--- a/content/first_exercise/first_exercise.ipynb
+++ b/content/first_exercise/first_exercise.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've written the stencil, we want to compile it to C++. We can to this with dusk's python API:"
+    "Now that we've written the stencil, we want to compile it to C++. We can to this with dusk's python API and dawn's cli:"
    ]
   },
   {
@@ -52,9 +52,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_cpp\n",
+    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_json\n",
     "\n",
-    "with open(\"simple_stencil_cxx-naive.cpp\", \"w\") as f: f.write(sir_to_cpp(pyast_to_sir(callable_to_pyast(simple_stencil))))\n",
+    "with open(\"simple_stencil.sir\", \"w\") as f:\n",
+    "    f.write(sir_to_json(pyast_to_sir(callable_to_pyast(simple_stencil))))\n",
+    "\n",
+    "!dawn-opt simple_stencil.sir | dawn-codegen -b naive-ico -o simple_stencil_cxx-naive.cpp\n",
     "!clang-format -i simple_stencil_cxx-naive.cpp"
    ]
   },
@@ -111,13 +114,6 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-7d28ohba because the default path (/home/jovyan/.config/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -207,10 +203,11 @@
     }
    ],
    "source": [
-    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_cpp\n",
+    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_json\n",
     "\n",
-    "with open(\"simple_stencil_cxx-naive.cpp\", \"w\") as f: f.write(sir_to_cpp(pyast_to_sir(callable_to_pyast(simple_stencil))))\n",
+    "with open(\"simple_stencil.sir\", \"w\") as f: f.write(sir_to_json(pyast_to_sir(callable_to_pyast(simple_stencil))))\n",
     "\n",
+    "!dawn-opt simple_stencil.sir | dawn-codegen -b naive-ico -o simple_stencil_cxx-naive.cpp\n",
     "!clang-format -i simple_stencil_cxx-naive.cpp\n",
     "!make simple_stencil\n",
     "!./runner"
@@ -358,9 +355,11 @@
     }
    ],
    "source": [
-    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_cpp\n",
-    "with open(\"image_stencil_cxx-naive.cpp\", \"w\") as f: f.write(sir_to_cpp(pyast_to_sir(callable_to_pyast(image_stencil))))\n",
+    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_json\n",
+    "with open(\"image_stencil.sir\", \"w\") as f:\n",
+    "    f.write(sir_to_json(pyast_to_sir(callable_to_pyast(image_stencil))))\n",
     "\n",
+    "!dawn-opt image_stencil.sir | dawn-codegen -b naive-ico -o image_stencil_cxx-naive.cpp\n",
     "!clang-format -i image_stencil_cxx-naive.cpp\n",
     "!make image_stencil\n",
     "\n",
@@ -466,7 +465,7 @@
     "y = \\frac{w_1 f_1 + w_2 f_2}{w_1 + w_2}\n",
     "$$\n",
     "\n",
-    "**However**, these curves work for $ x \\in [0, 1] $. Our RGB channels are in $ [0, 255] $.\n",
+    "However, these curves work for $ x \\in [0, 1] $. Our RGB channels are in $ [0, 255] $.\n",
     "\n",
     "Which leaves us with the following steps per channel:\n",
     "\n",
@@ -532,9 +531,12 @@
     }
    ],
    "source": [
-    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_cpp\n",
-    "with open(\"image_stencil_cxx-naive.cpp\", \"w\") as f: f.write(sir_to_cpp(pyast_to_sir(callable_to_pyast(image_stencil))))\n",
+    "from dusk.transpile import callable_to_pyast, pyast_to_sir, sir_to_json\n",
     "\n",
+    "with open(\"image_stencil.sir\", \"w\") as f:\n",
+    "    f.write(sir_to_json(pyast_to_sir(callable_to_pyast(image_stencil))))\n",
+    "\n",
+    "!dawn-opt image_stencil.sir | dawn-codegen -b naive-ico -o image_stencil_cxx-naive.cpp\n",
     "!clang-format -i image_stencil_cxx-naive.cpp\n",
     "!make image_stencil\n",
     "!./runner"
