fix diff ops, 1 file -> 3 files

--- a/content/differential_ops/differential_ops_demo.ipynb
+++ b/content/differential_ops/differential_ops_demo.ipynb
@@ -27,7 +27,6 @@
     "def gradient(f: Field[Edge], nx: Field[Edge], ny: Field[Edge], L: Field[Edge], A: Field[Cell], edge_orientation: Field[Cell > Edge], \n",
     "                f_x: Field[Cell], f_y: Field[Cell]):\n",
     "  with levels_downward:\n",
-    "    # replace by computation of gradient\n",
     "    f_x = 0\n",
     "    f_y = 0\n",
     "\n",
@@ -35,14 +34,12 @@
     "def divergence(u: Field[Edge], v: Field[Edge], nx: Field[Edge], ny: Field[Edge], L: Field[Edge], A: Field[Cell], edge_orientation: Field[Cell > Edge],\n",
     "                  uv_div: Field[Cell]):\n",
     "  with levels_downward:\n",
-    "    # replace by computation of divergence\n",
     "    uv_div = 0\n",
     "\n",
     "@stencil\n",
     "def curl(u: Field[Edge], v: Field[Edge], nx: Field[Edge], ny: Field[Edge], dualL: Field[Edge], dualA: Field[Vertex], edge_orientation: Field[Vertex > Edge],\n",
     "            uv_curl: Field[Vertex]):\n",
     "  with levels_downward:\n",
-    "    # replace by computation of curl\n",
     "    uv_curl = 0"
    ]
   },
@@ -60,10 +57,18 @@
    "outputs": [],
    "source": [
     "from dusk.transpile import callables_to_pyast, pyast_to_sir, sir_to_json\n",
-    "with open(\"diff_ops.sir\", \"w+\") as f:\n",
-    "    sir = pyast_to_sir(callables_to_pyast([gradient, divergence, curl]))\n",
+    "with open(\"gradient.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callables_to_pyast([gradient]))\n",
     "    f.write(sir_to_json(sir))\n",
-    "!dawn-opt diff_ops.sir | dawn-codegen -b naive-ico -o diff_ops_cxx-naive.cpp\n"
+    "with open(\"divergence.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callables_to_pyast([divergence]))\n",
+    "    f.write(sir_to_json(sir))\n",
+    "with open(\"curl.sir\", \"w+\") as f:\n",
+    "    sir = pyast_to_sir(callables_to_pyast([curl]))\n",
+    "    f.write(sir_to_json(sir))    \n",
+    "!dawn-opt gradient.sir | dawn-codegen -b naive-ico -o gradient_cxx-naive.cpp\n",
+    "!dawn-opt divergence.sir | dawn-codegen -b naive-ico -o divergence_cxx-naive.cpp\n",
+    "!dawn-opt curl.sir | dawn-codegen -b naive-ico -o curl_cxx-naive.cpp\n"
    ]
   },
   {
@@ -95,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!./runner gradient"
+    "!./runner divergence"
    ]
   },
   {
@@ -111,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run checker.py gradient"
+    "%run checker.py divergence"
    ]
   }
  ],
@@ -133,7 +138,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.2"
   },
-  "output_auto_scroll": false
+  "output_auto_scroll": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
