--- a/content/intro/jupyter_dusk_dawn_intro.ipynb
+++ b/content/intro/jupyter_dusk_dawn_intro.ipynb
@@ -719,14 +719,16 @@
      "output_type": "stream",
      "text": [
       "\u001b[01m\u001b[Kdriver.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kint main(int, char**)\u001b[m\u001b[K’:\n",
-      "\u001b[01m\u001b[Kdriver.cpp:170:27:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kno matching function for call to ‘\u001b[01m\u001b[Kdawn_generated::cxxnaiveico::simple_example_stencil<atlasInterface::atlasTag>::simple_example_stencil(atlas::Mesh&, const int&, std::tuple_element<0, std::tuple<atlasInterface::Field<double> > >::type&)\u001b[m\u001b[K’\n",
-      "  170 |       mesh, k_size, a_view\u001b[01;31m\u001b[K)\u001b[m\u001b[K\n",
-      "      |                           \u001b[01;31m\u001b[K^\u001b[m\u001b[K\n",
-      "In file included from \u001b[01m\u001b[Kdriver.cpp:29\u001b[m\u001b[K:\n",
-      "\u001b[01m\u001b[Kintro_cxx-naive.cpp:53:3:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[Kcandidate: ‘\u001b[01m\u001b[Kdawn_generated::cxxnaiveico::simple_example_stencil<LibTag>::simple_example_stencil(dawn::mesh_t<LibTag>&, int, dawn::edge_field_t<LibTag, double>&, dawn::cell_field_t<LibTag, double>&) [with LibTag = atlasInterface::atlasTag; dawn::mesh_t<LibTag> = atlas::Mesh; dawn::edge_field_t<LibTag, double> = atlasInterface::Field<double>; dawn::cell_field_t<LibTag, double> = atlasInterface::Field<double>]\u001b[m\u001b[K’\n",
-      "   53 |   \u001b[01;36m\u001b[Ksimple_example_stencil\u001b[m\u001b[K(const ::dawn::mesh_t<LibTag> &mesh, int k_size, ::dawn::edge_field_t<LibTag, ::dawn::float_type>& a, ::dawn::cell_field_t<LibTag, ::dawn::float_type>& b) : m_stencil_19(mesh, k_size,a){}\n",
-      "      |   \u001b[01;36m\u001b[K^~~~~~~~~~~~~~~~~~~~~~\u001b[m\u001b[K\n",
-      "\u001b[01m\u001b[Kintro_cxx-naive.cpp:53:3:\u001b[m\u001b[K \u001b[01;36m\u001b[Knote: \u001b[m\u001b[K  candidate expects 4 arguments, 3 provided\n",
+      "\u001b[01m\u001b[Kdriver.cpp:169:32:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[K‘\u001b[01m\u001b[Ksimple_example_stencil\u001b[m\u001b[K’ is not a member of ‘\u001b[01m\u001b[Kdawn_generated::cxxnaiveico\u001b[m\u001b[K’\n",
+      "  169 |   dawn_generated::cxxnaiveico::\u001b[01;31m\u001b[Ksimple_example_stencil\u001b[m\u001b[K<atlasInterface::atlasTag>(\n",
+      "      |                                \u001b[01;31m\u001b[K^~~~~~~~~~~~~~~~~~~~~~\u001b[m\u001b[K\n",
+      "\u001b[01m\u001b[Kdriver.cpp:169:79:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kexpected primary-expression before ‘\u001b[01m\u001b[K>\u001b[m\u001b[K’ token\n",
+      "  169 | :cxxnaiveico::simple_example_stencil<atlasInterface::atlasTag\u001b[01;31m\u001b[K>\u001b[m\u001b[K(\n",
+      "      |                                                              \u001b[01;31m\u001b[K^\u001b[m\u001b[K\n",
+      "\n",
+      "\u001b[01m\u001b[Kdriver.cpp:171:8:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[K‘\u001b[01m\u001b[Kstd::tuple_element<0, std::tuple<atlasInterface::Field<double> > >::type\u001b[m\u001b[K’ {aka ‘\u001b[01m\u001b[Kclass atlasInterface::Field<double>\u001b[m\u001b[K’} has no member named ‘\u001b[01m\u001b[Krun\u001b[m\u001b[K’\n",
+      "  171 |       .\u001b[01;31m\u001b[Krun\u001b[m\u001b[K();\n",
+      "      |        \u001b[01;31m\u001b[K^~~\u001b[m\u001b[K\n",
       "make: *** [Makefile:2: all] Error 1\n"
      ]
     }
@@ -738,7 +740,7 @@
     "        a = 1\n",
     "\n",
     "with open(\"intro.sir\", \"w\") as f:\n",
-    "    f.write(sir_to_json(pyast_to_sir(callable_to_pyast(simple_example_stencil))))\n",
+    "    f.write(sir_to_json(pyast_to_sir(callable_to_pyast(different_name))))\n",
     "\n",
     "!dawn-opt intro.sir | dawn-codegen -b naive-ico -o intro_cxx-naive.cpp\n",
     "\n",
@@ -814,7 +816,7 @@
    "outputs": [
     {
      "ename": "DuskSyntaxError",
-     "evalue": "DuskSyntaxError: Unsupported comparison operator '<_ast.In object at 0x7f310905d580>'!\nat None\n(<_ast.In object at 0x7f310905d580>)",
+     "evalue": "DuskSyntaxError: Unsupported comparison operator '<_ast.In object at 0x7f0111d6eaf0>'!\nat None\n(<_ast.In object at 0x7f0111d6eaf0>)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -844,7 +846,7 @@
       "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/dusk/grammar.py\u001b[0m in \u001b[0;36mdispatch\u001b[0;34m(rules, node)\u001b[0m\n\u001b[1;32m     84\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrecognizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrule\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mdoes_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecognizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mrule\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m     \u001b[0;32mraise\u001b[0m \u001b[0mDuskSyntaxError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Unrecognized node: '{node}'!\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/dusk/grammar.py\u001b[0m in \u001b[0;36mtransformer_with_matcher\u001b[0;34m(self, node, *args, **kwargs)\u001b[0m\n\u001b[1;32m     74\u001b[0m             \u001b[0mcaptures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m             \u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatcher\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcapturer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcaptures\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mtransformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcaptures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtransformer_with_matcher\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/dusk/grammar.py\u001b[0m in \u001b[0;36mcompare\u001b[0;34m(self, left, op, right)\u001b[0m\n\u001b[1;32m    677\u001b[0m         }\n\u001b[1;32m    678\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mop\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpy_compare_to_sir_compare\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 679\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mDuskSyntaxError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Unsupported comparison operator '{op}'!\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    680\u001b[0m         \u001b[0mop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpy_compare_to_sir_compare\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    681\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mmake_binary_operator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mleft\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mright\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDuskSyntaxError\u001b[0m: DuskSyntaxError: Unsupported comparison operator '<_ast.In object at 0x7f310905d580>'!\nat None\n(<_ast.In object at 0x7f310905d580>)"
+      "\u001b[0;31mDuskSyntaxError\u001b[0m: DuskSyntaxError: Unsupported comparison operator '<_ast.In object at 0x7f0111d6eaf0>'!\nat None\n(<_ast.In object at 0x7f0111d6eaf0>)"
      ]
     }
    ],
@@ -866,7 +868,7 @@
    "outputs": [
     {
      "ename": "DuskSyntaxError",
-     "evalue": "DuskSyntaxError: Unrecognized node: '<_ast.ListComp object at 0x7f30fc11b1c0>'!\nat Line: 4 - 4; Col: 12 - 35\n(<_ast.ListComp object at 0x7f30fc11b1c0>)",
+     "evalue": "DuskSyntaxError: Unrecognized node: '<_ast.ListComp object at 0x7f010c005b20>'!\nat Line: 4 - 4; Col: 12 - 35\n(<_ast.ListComp object at 0x7f010c005b20>)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -889,7 +891,7 @@
       "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/dusk/grammar.py\u001b[0m in \u001b[0;36mtransformer_with_matcher\u001b[0;34m(self, node, *args, **kwargs)\u001b[0m\n\u001b[1;32m     74\u001b[0m             \u001b[0mcaptures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m             \u001b[0mmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatcher\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcapturer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcaptures\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mtransformer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mcaptures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mtransformer_with_matcher\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/dusk/grammar.py\u001b[0m in \u001b[0;36mexpression\u001b[0;34m(self, expr)\u001b[0m\n\u001b[1;32m    416\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mexpression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpr\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mexpr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    417\u001b[0m         return make_expr(\n\u001b[0;32m--> 418\u001b[0;31m             dispatch(\n\u001b[0m\u001b[1;32m    419\u001b[0m                 {\n\u001b[1;32m    420\u001b[0m                     \u001b[0mConstant\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconstant\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/dusk/grammar.py\u001b[0m in \u001b[0;36mdispatch\u001b[0;34m(rules, node)\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mdoes_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecognizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mrule\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mDuskSyntaxError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Unrecognized node: '{node}'!\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDuskSyntaxError\u001b[0m: DuskSyntaxError: Unrecognized node: '<_ast.ListComp object at 0x7f30fc11b1c0>'!\nat Line: 4 - 4; Col: 12 - 35\n(<_ast.ListComp object at 0x7f30fc11b1c0>)"
+      "\u001b[0;31mDuskSyntaxError\u001b[0m: DuskSyntaxError: Unrecognized node: '<_ast.ListComp object at 0x7f010c005b20>'!\nat Line: 4 - 4; Col: 12 - 35\n(<_ast.ListComp object at 0x7f010c005b20>)"
      ]
     }
    ],
